--- a/habla_popup.html
+++ b/habla_popup.html
@@ -19,17 +19,18 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <script src="jquery-3.1.1.min.js"></script>
+    <!-- <script src="jquery-3.1.1.min.js"></script>
     <script src="habla_base.js"></script>
-    <script src="habla.js"></script>
+    <script src="habla.js"></script> -->
   </head>
   <body>
     <div id="comment-box-container">
       <textarea id="comment-box" name="comment" placeholder="Leave a comment here!"></textarea>
+        <div id="comment-box-submit">
+        <a id="comment-box-submit-button" href="#">Submit</a>
+      </div>
     </div>
-    <div id="comment-box-submit">
-      <a id="comment-box-submit-button" href="#">Submit</a>
-    </div>
+    
     <div id="comments-list">
       
     </div>
